--- a/creamify-store/src/styles/Productdetail.css
+++ b/creamify-store/src/styles/Productdetail.css
@@ -2,7 +2,7 @@
   display: flex;
   gap: 50px;
   padding: 60px;
-  background: linear-gradient(to top, #f5f5f5, #ac7322);
+  background: linear-gradient(to top, #f5f5f5, #c79043);
   min-height: 100vh;
   font-family: "Poppins", sans-serif;
 }
